Fix Overflowing Text

--- a/src/App.css
+++ b/src/App.css
@@ -85,9 +85,9 @@
   position: absolute;
   background: #fff;
   bottom: calc(100% + 10px);
-  left: -30em;
+  left: -15em;
   padding: 10px;
-  width: 60em;
+  width: 30em;
   z-index: 100;
 }
 
